fixed bug with video playing on full screen on Iphone

--- a/src/components/main/header.module.css
+++ b/src/components/main/header.module.css
@@ -34,6 +34,7 @@
     z-index: 1;
     will-change: transform, opacity;
     overflow: hidden;
+    pointer-events: none;
     backface-visibility: hidden;
 }
 
